--- a/xpi/content/css/starinurl.css
+++ b/xpi/content/css/starinurl.css
@@ -1,3 +1,5 @@
+@import url(chrome://ctr_os_special/skin/starinurlextra.css);
+
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 @-moz-document url(chrome://browser/content/browser.xul){
 	
@@ -20,16 +22,6 @@
 	  margin-left: 40px !important;
 	}
 
-	#nav-bar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing]) #bookmarks-menu-button:-moz-locale-dir(ltr) {
-	  margin-left: -68px !important;
-	  margin-right: 40px !important;
-	}
-	
-	#nav-bar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing]) #bookmarks-menu-button:-moz-locale-dir(rtl) {
-	  margin-right: -68px !important;
-	  margin-left: 40px !important;
-	}
-
 	toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing]) #bookmarks-menu-button .toolbarbutton-icon{
 	  -moz-appearance:none !important;
 	  background: none !important;
@@ -37,20 +29,33 @@
 	  box-shadow:none !important;
 	}
 
-	#main-window toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"] .toolbarbutton-icon{
-	  list-style-image: url("chrome://browser/skin/Toolbar.png") !important;
+	toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"] .toolbarbutton-icon {
+	  -moz-image-region: rect(0px 18px 18px 0px) !important;
+	  opacity: 1.0 !important;
 	}
-
-	#main-window toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"] .toolbarbutton-icon {
-	  -moz-image-region: rect(0, 144px, 18px, 126px) !important;
+	toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"]:hover .toolbarbutton-icon {
+	  background-image: radial-gradient(circle closest-side, hsla(45,100%,73%,.3), hsla(45,100%,73%,0)) !important;
+	  -moz-image-region: rect(0px 36px 18px 18px) !important;
+	  opacity: 1.0 !important;
 	}
-
-	#main-window toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"][starred] .toolbarbutton-icon {
-	  -moz-image-region: rect(0, 162px, 18px, 144px) !important;
+	toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"]:hover:active .toolbarbutton-icon {
+	  background-image: radial-gradient(circle closest-side, hsla(45,100%,73%,.1), hsla(45,100%,73%,0)) !important;
+	  -moz-image-region: rect(0px 54px 18px 36px) !important;
+	  opacity: 1.0 !important;
 	}
-
-	#main-window toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing]) #urlbar-container #urlbar-wrapper #urlbar #urlbar-icons {
-	  padding-right:24px !important;
+	toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"][starred] .toolbarbutton-icon {
+	  -moz-image-region: rect(0px 18px 18px 0px) !important;
+	  opacity: 1.0 !important;
+	}
+	toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"][starred]:hover .toolbarbutton-icon {
+	  background-image: radial-gradient(circle closest-side, hsla(45,100%,73%,.3), hsla(45,100%,73%,0)) !important;
+	  -moz-image-region: rect(0px 36px 18px 18px) !important;
+	  opacity: 1.0 !important;
+	}
+	toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"][starred]:hover:active .toolbarbutton-icon {
+	  background-image: radial-gradient(circle closest-side, hsla(45,100%,73%,.1), hsla(45,100%,73%,0)) !important;
+	  -moz-image-region: rect(0px 54px 18px 36px) !important;
+	  opacity: 1.0 !important;
 	}
 
 	#main-window toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing]) #bookmarks-menu-button .toolbarbutton-icon {
@@ -63,20 +68,7 @@
 	  visibility: collapse !important;
 	  display: none !important;
 	}
-	
-	#main-window toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing]) #bookmarks-menu-button {
-	  opacity:0.75 !important;
-	}
-	
-	#main-window toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing]) #bookmarks-menu-button[starred]:hover {
-	  opacity:0.85 !important;
-	}
-	
-	#main-window toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing]) #bookmarks-menu-button:hover,
-	#main-window toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing]) #bookmarks-menu-button[starred] {
-	  opacity:1.0 !important;
-	}	
-	
+
 	#main-window #nav-bar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing]) #bookmarks-menu-button:not(#back-button):not(#forward-button):not(#ctr_back-button):not(#ctr_forward-button) > .toolbarbutton-menubutton-button:not([disabled="true"]):hover:active,
 	#main-window #nav-bar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing]) #bookmarks-menu-button .toolbarbutton-menubutton-button,
 	#main-window #nav-bar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing]) #bookmarks-menu-button .toolbarbutton-menubutton-button:not(:active):hover{
@@ -94,7 +86,6 @@
 	  margin: 0px !important;
 	}
 
-
 	#main-window #navigator-toolbox #nav-bar[currentset*="urlbar-container,bookmarks-menu-button,search-container"]:not([customizing]) #search-container:-moz-locale-dir(ltr){
 	  margin-left: -4px !important;
 	}
@@ -103,8 +94,23 @@
 	  margin-right: -4px !important;
 	}
 
+	#navigator-toolbox  #nav-bar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing]) #bookmarks-menu-button {
+      -moz-appearance: none !important;
+      background: unset !important;
+      box-shadow: unset !important;
+    }
+
 	#main-window {
 	  min-width: 580px !important;
+	}
+
+	/* hide animation */
+	#bookmarked-notification {
+	  visibility: collapse !important;
+	}
+	
+	#bookmarks-menu-button * {
+	  animation: none !important;
 	}
 
 }
