--- a/xpi/content/css/tabs_squared-osx.css
+++ b/xpi/content/css/tabs_squared-osx.css
@@ -13,12 +13,15 @@
 	
 	.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
 	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #a1a1a1,#c0c0c0,#cccccc,#d4d4d4);
-	  color:black !important;
 	}
 	
 	.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
 	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#b3b3b3,#cfcfcf,#dedede,#e5e5e5);
-	  color:black !important;
+	}
+	
+	.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover),
+	.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover{
+	  color: black !important;
 	}
 	
 	.tabs-newtab-button:not(:-moz-lwtheme) {
@@ -59,12 +62,15 @@
 	#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar #ctr_appbutton{
 		margin-left:-2px !important;
 	}
-
+	
+	.tabbrowser-tab:hover > .tab-stack > .tab-background > .tab-background-middle:not([selected=true]),
+	.tabbrowser-tab:hover > .tab-stack > .tab-background > .tab-background-start:not([selected=true]),
+	.tabbrowser-tab:hover > .tab-stack > .tab-background > .tab-background-end:not([selected=true]),
 	.tab-background-middle[selected=true],
 	.tab-background-start[selected=true]::before,
 	.tab-background-end[selected=true]::before,
 	.tabbrowser-tab:hover > .tab-stack > .tab-background:not([selected=true]){
-		background:none !important;
+	  background:none !important;
 	}
 	
 	.tab-background-start[selected=true]:-moz-locale-dir(ltr)::after,
@@ -227,10 +233,18 @@
 	.tabbrowser-tab:not([pinned]) .tab-close-button{
 	  margin-right:-4px !important;
 	}
-
+	
+	.tabbrowser-tab:not([pinned]) .tab-throbber,
 	.tabbrowser-tab:not([pinned]) .tab-icon-image{
 	  margin-left:-3px !important;
 	  margin-right:3px !important;
+	}
+	
+	#TabsToolbar{
+	  background-image: none !important;
+	}
+	#TabsToolbar::after {
+	  border-bottom: 0px !important;
 	}
 }
 
