--- a/xpi/ctr_os_special/mac/overlayextra.css
+++ b/xpi/ctr_os_special/mac/overlayextra.css
@@ -95,6 +95,11 @@
 	  margin-top:0px !important;
 	}
 	
+	#navigator-toolbox #nav-bar #ctr_appbutton image{
+	  margin-left: 0px !important;
+	  margin-right: 0px !important;
+	}
+	
 	#ctr_appbuttonPopup .menu-iconic-left {
       padding-right: 4px !important;
 	}
