--- a/xpi/ctr_os_special/winaero/classictabsextra.css
+++ b/xpi/ctr_os_special/winaero/classictabsextra.css
@@ -32,7 +32,11 @@
 	.tabs-newtab-button{
 	  margin-right:-15px !important;
 	}
-	
+
+	.tabbrowser-tab[selected=true]:-moz-lwtheme {
+	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.46) 50%) !important;
+	}
+
 	/* for Windows Aero Theme (AeroBasic/AeroGlass - Vista/7/8) */
 	@media all and (-moz-windows-theme:aero) {
 		.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) {
@@ -43,6 +47,11 @@
 		}
 		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#d0dce8,#dce7f3,#e5effa);
+		}
+		
+		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover),
+		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover{
+		  color:black !important;
 		}
 		
 		.tabs-newtab-button:not(:-moz-lwtheme) {
@@ -69,15 +78,18 @@
 		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
 							linear-gradient(-moz-dialog, -moz-dialog);
-		  color:black !important;
 		}
 
 		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
 							linear-gradient(-moz-dialog, -moz-dialog);
+		}
+
+		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover),
+		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover{
 		  color:black !important;
 		}
-		
+
 		.tabs-newtab-button:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
 							linear-gradient(-moz-dialog, -moz-dialog) !important;
