--- a/xpi/content/css/cuibuttons.css
+++ b/xpi/content/css/cuibuttons.css
@@ -5,8 +5,9 @@
 
 	#ctr_cuibuttonsbox{
 	  visibility: visible !important;
-	  background-color: #ececec !important;
-      padding: 0 15px 2px 15px !important;
+	  background-color: #ececec;
+      padding: 0 15px 15px 15px;
+	  margin-top:-6px;
 	}
 
 	/* customize area buttons */	
@@ -54,40 +55,6 @@
 	  min-width: 0 !important;
 	}
 	
-	/* temp fix */
-	/*#customization-toolbar-visibility-button #customization-toolbar-menu {
-	  min-width: 150px !important;
-	}*/
-	
-	/* adjust buttons */
-	/*#customization-toolbar-visibility-button,
-	#customization-reset-button{
-	  margin:2px 0px !important;
-	  background:#e6e6e6 !important;
-	}
-
-	#customization-toolbar-visibility-button[open],
-	#customization-reset-button:active{
-	  background:#d0d0d0 !important;
-	}
-	#customization-container vbox ~ hbox{
-	  background: #f2f2f2;
-	  margin-top: -25px !important;
-	  margin-left: -25px !important;
-	  margin-right: -25px !important;
-	  padding-left: 10px !important;
-	  padding-right: 10px !important;
-	  padding-top: 5px !important;
-	  border-top: 1px solid #c7c7c8 !important;
-	}
-
-	#customization-container vbox ~ hbox ~ hbox{
-	  margin-top: 0px !important;
-	  margin-bottom: -25px !important;
-	  padding-bottom: 5px !important;
-	  padding-top: 4px !important;
-	  border-top: 0px !important;
-	}*/
 	.customizationmode-button:hover{
 	  border-top: 1px solid #89b3d4 !important;
 	  border-bottom: 1px solid #89b3d4 !important;
