--- a/xpi/content/css/tabmokcolor.css
+++ b/xpi/content/css/tabmokcolor.css
@@ -1,48 +1,38 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
-@-moz-document url(chrome://browser/content/browser.xul),
-			   url(chrome://global/content/customizeToolbar.xul) {
+@-moz-document url(chrome://browser/content/browser.xul) {
   
-  #main-window[tabsintitlebar]:not([inFullscreen]) .tabbrowser-arrowscrollbox > .scrollbutton-up,
-  #main-window[tabsintitlebar]:not([inFullscreen]) .tabbrowser-arrowscrollbox > .scrollbutton-down {
-    list-style-image: url(chrome://classic_theme_restorer/content/images/tab-arrow-left-inverted.png) !important;
-  }
+	#main-window[tabsintitlebar]:not([inFullscreen]) .tabbrowser-arrowscrollbox > .scrollbutton-up,
+	#main-window[tabsintitlebar]:not([inFullscreen]) .tabbrowser-arrowscrollbox > .scrollbutton-down {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/tab-arrow-left-inverted.png) !important;
+	}
 
-  #main-window[tabsintitlebar]:not([inFullscreen]) .tabs-newtab-button,
-  #main-window[tabsintitlebar]:not([inFullscreen]) #TabsToolbar > #new-tab-button,
-  #main-window[tabsintitlebar]:not([inFullscreen]) #TabsToolbar > toolbarpaletteitem > #new-tab-button {
-    list-style-image: url(chrome://classic_theme_restorer/content/images/newtab-inverted.png) !important;
-  }
+	#main-window[tabsintitlebar]:not([inFullscreen]) .tabs-newtab-button,
+	#main-window[tabsintitlebar]:not([inFullscreen]) #TabsToolbar > #new-tab-button,
+	#main-window[tabsintitlebar]:not([inFullscreen]) #TabsToolbar > toolbarpaletteitem > #new-tab-button {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/newtab-inverted.png) !important;
+	}
 
-  #main-window[tabsintitlebar]:not([inFullscreen]) #TabsToolbar > #alltabs-button {
-    list-style-image: url(chrome://classic_theme_restorer/content/images/toolbarbutton-dropdown-arrow-inverted.png) !important;
-  }
+	#main-window[tabsintitlebar]:not([inFullscreen]) #TabsToolbar > #alltabs-button {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/toolbarbutton-dropdown-arrow-inverted.png) !important;
+	}
 
-  #main-window[tabsintitlebar]:not([inFullscreen]) #TabsToolbar > #tabview-button {
-    list-style-image: url(chrome://classic_theme_restorer/content/images/tabview-inverted.png) !important;
-  }
+	#main-window[tabsintitlebar]:not([inFullscreen]) #TabsToolbar > #tabview-button {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/tabview-inverted.png) !important;
+	}
 
-  #main-window[tabsintitlebar]:not([inFullscreen]) .tab-close-button:not(:-moz-any(:hover,:-moz-lwtheme,[selected="true"])),
-  .tab-close-button:not(:hover):not([selected="true"]):-moz-lwtheme-brighttext {
-	background-image: url(chrome://classic_theme_restorer/content/images/tab-close.png) !important;
-    -moz-image-region: rect(0, 64px, 16px, 48px) !important;
-  }
+	#main-window[tabsintitlebar]:not([inFullscreen]) .tab-close-button:not(:-moz-any(:hover,:-moz-lwtheme,[selected="true"])),
+	.tab-close-button:not(:hover):not([selected="true"]):-moz-lwtheme-brighttext {
+	  background-image: url(chrome://classic_theme_restorer/content/images/tab-close.png) !important;
+	  -moz-image-region: rect(0, 64px, 16px, 48px) !important;
+	}
 
-  #tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
-  .tabbrowser-tab:not([selected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before,
-  #tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([selected]):not([beforehovered]):not(:hover)::after {
-    background-image: url(chrome://classic_theme_restorer/content/images/tab-separator-inv.png) !important;
-  }
+	#tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
+	.tabbrowser-tab:not([selected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before,
+	#tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([selected]):not([beforehovered]):not(:hover)::after {
+	  background-image: url(chrome://classic_theme_restorer/content/images/tab-separator-inv.png) !important;
+	}
 
-  #main-window[tabsintitlebar]:not([inFullscreen]) .tabbrowser-tab:not([selected]):not(:-moz-lwtheme) {
-	color: white !important;
-	text-shadow:
-	  0px 0px 3px black,
-	  0px 0px 3px black,
-	  0px 0px 3px black,
-	  0px 0px 3px black !important;
-  }
-  
 	/* Tab close button */
 	.tab-close-button,
 	.tabs-closebutton	{
