--- a/xpi/content/css/tabs_squared2.css
+++ b/xpi/content/css/tabs_squared2.css
@@ -6,12 +6,15 @@
 	#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar #ctr_appbutton{
 		margin-left:-2px !important;
 	}
-
+	
+	.tabbrowser-tab:hover > .tab-stack > .tab-background > .tab-background-middle:not([selected=true]),
+	.tabbrowser-tab:hover > .tab-stack > .tab-background > .tab-background-start:not([selected=true]),
+	.tabbrowser-tab:hover > .tab-stack > .tab-background > .tab-background-end:not([selected=true]),
 	.tab-background-middle[selected=true],
 	.tab-background-start[selected=true]::before,
 	.tab-background-end[selected=true]::before,
 	.tabbrowser-tab:hover > .tab-stack > .tab-background:not([selected=true]){
-		background:none !important;
+	  background:none !important;
 	}
 	
 	.tab-background-start[selected=true]:-moz-locale-dir(ltr)::after,
@@ -42,10 +45,11 @@
 	  -moz-border-image: none !important;
 	  padding-left: 5px !important;
 	  padding-right: 5px !important;
+      padding-bottom: 1px !important;
 	  margin-left: 0px !important;
 	  margin-right: 0px !important;
 	  margin-top: 0px !important;
-	  margin-bottom: 0px !important;
+	  margin-bottom: 1px !important;
 	}
 
 	#TabsToolbar {
@@ -135,17 +139,24 @@
 	.tabs-newtab-button:-moz-lwtheme,
 	.tabbrowser-tab:-moz-lwtheme,
 	.tabbrowser-tab[pinned]:-moz-lwtheme{
-	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.5) 50%) !important;
 	  background-size: calc(100% - 1px) calc(100% - 3px) !important;
+	}
+	
+	.tabs-newtab-button:-moz-lwtheme{
+	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.5) 50%) !important;
 	}
 
 	@media all and (-moz-windows-glass) {
-	.tabs-newtab-button:-moz-lwtheme,		
-	.tabbrowser-tab:-moz-lwtheme,
-	.tabbrowser-tab[pinned]:-moz-lwtheme {
+		.tabs-newtab-button:-moz-lwtheme,		
+		.tabbrowser-tab:-moz-lwtheme,
+		.tabbrowser-tab[pinned]:-moz-lwtheme {
 		  background-size: calc(100% - 1px) calc(100% - 4px) !important;
 		}
 	}
+	
+	/*.tabbrowser-tab[selected=true]:-moz-lwtheme {
+	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.46) 50%) !important;
+	}*/
 	
 	.tabs-newtab-button:-moz-lwtheme,
 	.tabbrowser-tab:not([selected="true"]):-moz-lwtheme {
@@ -160,13 +171,16 @@
 						radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 	}
 
-	.tab-background-middle[selected=true]:-moz-lwtheme{
-	  background: linear-gradient(to top, rgba(10%,10%,10%,.2) 0px, transparent 0px), linear-gradient(transparent, hsla(0,0%,45%,.0) 1px, hsla(0,0%,32%,.0) 80%, hsla(0,0%,0%,.0)) !important;
-	}
-
 	#navigator-toolbox toolbar:-moz-lwtheme{
 	  box-shadow:none !important;
 	  border: 0px solid transparent !important;
+	}
+	
+	#TabsToolbar{
+	  background-image: none !important;
+	}
+	#TabsToolbar::after {
+	  border-bottom: 0px !important;
 	}
 
 	.tabbrowser-tab[pinned]{
@@ -190,7 +204,8 @@
 	.tabbrowser-tab:not([pinned]) .tab-close-button{
 	  margin-right:-4px !important;
 	}
-
+	
+	.tabbrowser-tab:not([pinned]) .tab-throbber,
 	.tabbrowser-tab:not([pinned]) .tab-icon-image{
 	  margin-left:-3px !important;
 	  margin-right:3px !important;
