--- a/xpi/content/css/tabsontop_off.css
+++ b/xpi/content/css/tabsontop_off.css
@@ -15,8 +15,12 @@
 	#PersonalToolbar {
 	  -moz-box-ordinal-group: 3 !important;
 	}
+	/* other toolbars like google, amazon etc.*/
+	toolbar {
+	  -moz-box-ordinal-group: 10 !important;
+	}
 	#ctr_extra-bar {
-	  -moz-box-ordinal-group: 4 !important;
+	  -moz-box-ordinal-group: 98 !important;
 	}
 	#TabsToolbar {
 	  -moz-box-ordinal-group: 100 !important;
@@ -28,12 +32,20 @@
 	  margin-top: 0px !important;
 	}
 
-	.tabs-newtab-button,
-	.tabbrowser-tab{
-		margin-bottom: -2px !important;
-		height: 28px;
+	#TabsToolbar .tabs-newtab-button,
+	#TabsToolbar .tabbrowser-tab{
+	  height: 28px;
 	}
 
+	#TabsToolbar .tabbrowser-tabs:not([multibar]) .tabs-newtab-button,
+	#TabsToolbar .tabbrowser-tabs:not([multibar]) .tabbrowser-tab {
+	  margin-bottom: -2px !important;
+	}
+	
+	#TabsToolbar[multibar]  {
+	  margin-bottom: -2px !important;
+	}
+	
 	#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar #ctr_appbutton{
 		margin-top: 2px !important; 
 		margin-bottom: 0px !important;
@@ -54,5 +66,12 @@
 	#main-window[tabsintitlebar] #TabsToolbar .titlebar-placeholder{
 	  visibility: collapse !important;
 	}
+
+	/* Personas support */
+	#nav-bar:-moz-lwtheme {
+	  background-image: none !important;
+	  box-shadow: none !important;
+	  border: none !important;
+	}	
 
 }
