--- a/xpi/ctr_os_special/mac/smallnavbutextra.css
+++ b/xpi/ctr_os_special/mac/smallnavbutextra.css
@@ -13,16 +13,118 @@
 	  border: 0 !important;
 	}
 
-	#bookmarks-menu-button[cui-areatype="toolbar"] > .toolbarbutton-menubutton-dropmarker {
-	  margin-top: 3px !important;
-	  margin-bottom: 3px !important;
-	}
-	
-	#navigator-toolbox #nav-bar .toolbarbutton-1 {
-	  margin: -3px 0 !important;
-	}
 	#navigator-toolbox #nav-bar #forward-button {
 	  margin-right: 2px !important;
+	}
+	
+	#nav-bar .toolbarbutton-1 {
+      min-width:24px !important;
+    }
+
+    #nav-bar * .toolbarbutton-icon,
+	#nav-bar * {
+	  clip-path: none !important;
+	}
+
+	#urlbar-container #back-button:not([cui-areatype="menu-panel"]) {
+	  -moz-image-region: rect(0, 54px, 18px, 36px) !important;
+	}
+
+	#urlbar-container #forward-button[disabled]{
+	  visibility: visible !important;
+	  opacity: 1.0 !important;
+	}
+
+    #navigator-toolbox #nav-bar #forward-button{
+	  -moz-appearance: none !important;
+	  background: none !important;
+	  background-image: none !important;
+	  border-radius: 2.5px;
+	  border-color: transparent !important;
+	  box-shadow: none !important;
+	  transition-property: none !important;
+      transition-duration: 0ms !important;
+      margin-left: -4px !important;
+	}   
+
+	#nav-bar #back-button:not(:hover) > .toolbarbutton-icon,
+	#nav-bar #forward-button:not(:hover) > .toolbarbutton-icon,
+	#nav-bar #back-button:hover[disabled] > .toolbarbutton-icon,
+	#nav-bar #forward-button:hover[disabled] > .toolbarbutton-icon{
+	  -moz-appearance: none !important;
+	  border: 0px solid transparent !important;
+	  box-shadow: none !important;
+	  background: none !important;
+	}
+
+    #urlbar:-moz-locale-dir(ltr){
+      border-left:1px solid #b4c1cf !important;
+    }
+    #urlbar[focused="true"]:-moz-locale-dir(ltr){
+      border-left:1px solid #72c0fe !important;
+    }
+    #urlbar:-moz-locale-dir(rtl){
+      border-right:1px solid #b4c1cf !important;
+    }
+    #urlbar[focused="true"]:-moz-locale-dir(rtl){
+      border-right:1px solid #72c0fe !important;
+    }
+	
+	#ctr_puib_separator{
+	  margin-top: 2px !important;
+	  margin-bottom: 2px !important;
+	}
+	
+	#navigator-toolbox #nav-bar .toolbarbutton-1 > .toolbarbutton-menubutton-button,
+	#navigator-toolbox #nav-bar .toolbarbutton-1 > .toolbarbutton-menubutton-dropmarker,
+	#navigator-toolbox #nav-bar .toolbarbutton-1 {
+	  padding: 0px 0px !important;
+	  margin: 0.5px 0 0 0 !important;
+	}
+	
+	#navigator-toolbox #nav-bar #bookmarks-menu-button .toolbarbutton-menubutton-dropmarker .dropmarker-icon{
+	  margin-left:1px !important;
+	}
+	#navigator-toolbox #nav-bar #bookmarks-menu-button .toolbarbutton-menubutton-dropmarker{
+	  margin-left:-5px !important;
+	}
+	
+	/* star button in urlbar support */
+	#navigator-toolbox  #nav-bar #urlbar-container #bookmarks-menu-button {
+      -moz-appearance: none !important;
+      background: unset !important;
+      box-shadow: unset !important;
+	  border: unset !important;
+    }
+
+	#navigator-toolbox #nav-bar #urlbar-container #bookmarks-menu-button > .toolbarbutton-menubutton-button {
+	  -moz-appearance: none !important;
+	  padding: 0px 0px !important;
+	  background: none !important;
+	  border: 0px solid !important;
+	  margin: -8px 0 !important;
+	  box-shadow: none !important;
+	}
+	#navigator-toolbox #nav-bar #urlbar-container  #bookmarks-menu-button > .toolbarbutton-menubutton-button:not(.tabs-newtab-button):not(.tab-close-button):not([disabled]):hover > .toolbarbutton-icon {
+      background-image: linear-gradient(hsla(0,0%,100%,.0), hsla(0,0%,100%,.0)) !important;
+      border-color: hsla(210,54%,20%,.0) hsla(210,54%,20%,.0) hsla(210,54%,20%,.0) !important;
+      box-shadow: none !important;
+	}
+	
+	/* zoom page add-on */
+    #navigator-toolbox #nav-bar #zoompage-zoomdisplay-s,
+    #navigator-toolbox #nav-bar #zoompage-zoomin-s,
+    #navigator-toolbox #nav-bar #zoompage-zoomout-s,
+    #navigator-toolbox #nav-bar #zoompage-zoomdisplay-t,
+    #navigator-toolbox #nav-bar #zoompage-zoomout-t,
+    #navigator-toolbox #nav-bar #zoompage-zoomin-t {
+      -moz-appearance: none !important;
+    }
+	#nav-bar #zoompage-zoomout-s image,
+	#nav-bar #zoompage-zoomin-s image,
+	#nav-bar #zoompage-zoomout-t image,
+	#nav-bar #zoompage-zoomin-t image{
+	  padding:1px !important;
 	}
 
 }
