--- a/xpi/ctr_os_special/winaero/classictabsextra2.css
+++ b/xpi/ctr_os_special/winaero/classictabsextra2.css
@@ -32,6 +32,10 @@
 	.tabs-newtab-button{
 	  margin-right:-15px !important;
 	}
+
+	.tabbrowser-tab[selected=true]:-moz-lwtheme {
+	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.46) 50%) !important;
+	}
 	
 	/* for Windows Aero Theme (AeroBasic/AeroGlass - Vista/7/8) */
 	@media all and (-moz-windows-theme:aero) {
