--- a/xpi/ctr_os_special/winaero/curvedtabsextra.css
+++ b/xpi/ctr_os_special/winaero/curvedtabsextra.css
@@ -3,31 +3,41 @@
 @-moz-document url(chrome://browser/content/browser.xul){
 	
 	@media all and (-moz-windows-theme:aero) {
+
 		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover) .tab-stack .tab-background-middle,
 		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover) .tab-background-start,
-		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover) .tab-background-end {
-		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#b4c0cc,#c8d4e1,#d1deec);
+		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover) .tab-background-end{
+		  background-image: linear-gradient(transparent, transparent 2px, #d1deec 0px, #c8d4e1, #b4c0cc), none !important;
 		}
-
 		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover .tab-stack .tab-background-middle,
 		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover .tab-background-start,
 		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover .tab-background-end {
-		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#d0dce8,#dce7f3,#e5effa);
+		  background-image: linear-gradient(transparent, transparent 2px, #e5effa 0px, #dce7f3,#d0dce8), none !important;
 		}
 
+		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover),
+		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover{
+		  color: black !important;
+		}
+		
 	}
 
 	@media not all and (-moz-windows-theme:aero) {
 		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover) .tab-stack .tab-background-middle,
 		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover) .tab-background-start,
 		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover) .tab-background-end {
-		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)), linear-gradient(-moz-dialog, -moz-dialog);
+		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, transparent 2px, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),linear-gradient(transparent, transparent 2px, -moz-dialog 0px, -moz-dialog), none !important;
 		}
 
 		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover .tab-stack .tab-background-middle,
 		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover .tab-background-start,
 		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover .tab-background-end {
-		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)), linear-gradient(-moz-dialog, -moz-dialog);
+		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, transparent 2px, hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)), linear-gradient(transparent, transparent 2px, -moz-dialog 0px, -moz-dialog), none !important;
+		}
+		
+		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover),
+		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover{
+		  color:black !important;
 		}
 	}
 
